--- a/base64/base64.html
+++ b/base64/base64.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="base64.css">
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.5.1.min.js"></script>
+    <script src="../common/jquery.js"></script>
 </head>
 
 <body>
