--- a/popup.html
+++ b/popup.html
@@ -12,6 +12,7 @@
 </style>
 <body>
     <button class="bw" id="base64">base64</button>
+    <button class="bw" id="url-store">url-store</button>
 </body>
 
 <script src="popup.js"></script>
