--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
 <body>
     <button class="bw" id="base64">base64</button>
     <button class="bw" id="url-store">url-store</button>
+    <button class="bw" id="html-str-show">html-str-show</button>
 </body>
 
 <script src="popup.js"></script>
