--- a/notebook/notebook.html
+++ b/notebook/notebook.html
@@ -4,18 +4,26 @@
     <meta charset="UTF-8">
     <title>notebook</title>
     <script src="../common/jquery.js"></script>
-    <link rel="stylesheet" href="richText/font-awesome.min.css">
-    <script src="richText/jquery.richtext.min.js"></script>
-    <link rel="stylesheet" href="richText/site.css">
-    <link rel="stylesheet" href="richText/richtext.min.css">
+    <link rel="stylesheet" href="notebook.css">
 
 </head>
 <body>
-<div class="page-wrapper box-content">
+<div class="containerDiv">
+<!--    <div class="recordDiv">-->
+<!--        <div class="titleDiv">-->
+<!--            <textarea class="title" id="title">title</textarea>-->
+<!--        </div>-->
+<!--        <div class="contentDiv">-->
+<!--            <textarea class="content" id="content">content</textarea>-->
+<!--        </div>-->
+<!--        <div class="saveDiv">-->
+<!--            <button class="savebtn">save</button>-->
+<!--        </div>-->
+<!--    </div>-->
 
-    <textarea class="content" name="example"></textarea>
 
 </div>
+<div class="newBtnDiv"><button class="newbtn">new</button></div>
 </body>
 <script src="notebook.js"></script>
 </html>
