--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,7 @@
     <button class="bw" id="base64">base64</button>
     <button class="bw" id="url-store">url-store</button>
     <button class="bw" id="html-str-show">html-str-show</button>
+    <button class="bw" id="notebook">notebook</button>
 </body>
 
 <script src="popup.js"></script>
