--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
     <button class="bw" id="url-store">url-store</button>
     <button class="bw" id="html-str-show">html-str-show</button>
     <button class="bw" id="notebook">notebook</button>
+    <button class="bw" id="tabs">tabs</button>
 </body>
 
 <script src="popup.js"></script>
