整理pop页面的名称

--- a/popup.html
+++ b/popup.html
@@ -12,11 +12,10 @@
     }
 </style>
 <body>
-    <button class="bw" id="base64">base64</button>
-    <button class="bw" id="url-store">url-store</button>
-    <button class="bw" id="html-str-show">html-str-show</button>
-    <button class="bw" id="notebook">notebook</button>
-    <button class="bw" id="tabs">tabs</button>
+    <button class="bw" id="base64">文件base64</button>
+    <button class="bw" id="html-str-show">html渲染</button>
+    <button class="bw" id="notebook">记事本</button>
+    <button class="bw" id="tabs">标签整理</button>
 </body>
 
 <script src="popup.js"></script>
