--- a/tabs/tabs.html
+++ b/tabs/tabs.html
@@ -7,16 +7,19 @@
     <script src="../common/jquery.js"></script>
     <script src="../common/chormefunc.js"></script>
 
+
 </head>
 <body>
-
+<div class="top"><textarea id="textData" class="textData"></textarea></div>
 <div class="containerDiv">
     <h1>
         <button id="recordBtn">记录当前所有标签</button>
-        <button>导出</button>
-        <button>导入</button>
+        <button id="datahandle">数据处理</button>
+        <button id="export">导出</button>
+        <button id="import">导入</button>
     </h1>
 </div>
 </body>
 <script src="tabs.js"></script>
+<script src="dataproccess.js"></script>
 </html>
