--- a/notebook/notebook.html
+++ b/notebook/notebook.html
@@ -6,9 +6,17 @@
     <script src="../common/jquery.js"></script>
     <link rel="stylesheet" href="notebook.css">
 
+
 </head>
 <body>
+<div class="top"><textarea id="textData" class="textData"></textarea></div>
+
 <div class="containerDiv">
+    <h1>
+        <button id="datahandle">数据处理</button>
+        <button id="export">导出</button>
+        <button id="import">导入</button>
+    </h1>
 <!--    <div class="recordDiv">-->
 <!--        <div class="titleDiv">-->
 <!--            <textarea class="title" id="title">title</textarea>-->
@@ -26,4 +34,5 @@
 <div class="newBtnDiv"><button class="newbtn">new</button></div>
 </body>
 <script src="notebook.js"></script>
+<script src="dataproccess.js"></script>
 </html>
