--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,7 @@
 </style>
 <body>
     <button class="bw" id="base64">文件base64</button>
-    <button class="bw" id="html-str-show">html渲染</button>
+    <button class="bw" id="render">html渲染</button>
     <button class="bw" id="notebook">记事本</button>
     <button class="bw" id="tabs">标签整理</button>
 </body>
