--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,7 @@
     <button class="bw" id="render">html渲染</button>
     <button class="bw" id="notebook">记事本</button>
     <button class="bw" id="tabs">标签整理</button>
+    <button class="bw" id="yml">YML/JSON</button>
 </body>
 
 <script src="popup.js"></script>
