--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>pop</title>
     <script src="common/jquery.js"></script>
+    <script src="common/chormefunc.js"></script>
 </head>
 <style>
     .bw{
@@ -17,6 +18,7 @@
     <button class="bw" id="notebook">记事本</button>
     <button class="bw" id="tabs">标签整理</button>
     <button class="bw" id="yml">YML/JSON</button>
+    <button class="bw" id="links">链接管理</button>
 </body>
 
 <script src="popup.js"></script>
