--- a/link/links.html
+++ b/link/links.html
@@ -27,7 +27,7 @@
         <div class="col-md-12 column">
             <div class="jumbotron">
                 <h1>
-                    你好,Urls <button class="btn btn-primary btn-large" id="recordBtn">recordOne</button>
+                    hello,Urls <button class="btn btn-primary" id="recordBtn">recordOne</button>
                 </h1>
                     <input type="text" class="form-control" id="search" placeholder="begin">
             </div>
