--- a/link/links.html
+++ b/link/links.html
@@ -23,7 +23,7 @@
     </div>
 </div>
 <div class="container">
-    <div class="row clearfix">
+    <div class="row clearfix top">
         <div class="col-md-12 column">
             <div class="jumbotron">
                 <h1>
