--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,7 @@
     <button class="bw" id="tabs">标签整理</button>
     <button class="bw" id="yml">YML/JSON</button>
     <button class="bw" id="links">链接管理</button>
+    <button class="bw" id="react">react</button>
 </body>
 
 <script src="popup.js"></script>
